--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     </head>
     <body>
         <h1>Emma Sanchez's CSCE 190 Site</h1>
-
         <p> I &hearts; coding!</p>
+        
+        <section class="assignment">
+            <a href="files/Problem Statement.pdf"><img src="images/Problem Statement.jpg"></a>
+            <section class="ass-details">
+                <a href="files/Problem Statement.pdf"><h2>Problem Statement: Campus Navigator</h2></a>
+                <p> 
+                    Our students are getting lost going to their classes and our app can help create a visual aid in navigating the UofSC campus. Included will be bus routes, campus foot traffic, and lesser known walking paths. 
+                </p>
+            </section>
+        </section>
     </body>
 </html>
