--- a/index.html
+++ b/index.html
@@ -7,12 +7,24 @@
         <h1>Emma Sanchez's CSCE 190 Site</h1>
         <p> I &hearts; coding!</p>
         
+        <!-- Problem Statemtn Assignment-->
         <section class="assignment">
-            <a href="Files/Problem Statement.pdf"><img src="Images/Problem Statement.jpg"></a>
+            <a href="Files/problem-statement.pdf"><img src="Images/problem-statement.jpg"></a>
             <section class="ass-details">
-                <a href="Files/Problem Statement.pdf"><h2>Problem Statement: Campus Navigator</h2></a>
+                <a href="Files/problem-statement.pdf"><h2>Problem Statement: Campus Navigator</h2></a>
                 <p> 
                     Our students are getting lost going to their classes and our app can help create a visual aid in navigating the UofSC campus. Included will be bus routes, campus foot traffic, and lesser known walking paths. 
+                </p>
+            </section>
+        </section>
+
+        <!-- Affinity Diagram Assignment-->
+        <section class="assignment">
+            <a href="Files/affinity-diagram.pdf"><img src="Images/affinity-diagram.jpg"></a>
+            <section class="ass-details">
+                <a href="Files/affinity-diagram.pdf"><h2>Affinity Diagram: Campus Navigator</h2></a>
+                <p> 
+                    All aspects of campus navigation can be found in this diagram!
                 </p>
             </section>
         </section>
