--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title> CSCE 190: Emma Sanchez</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Emma Sanchez's CSCE 190 Site</h1>
