--- a/index.html
+++ b/index.html
@@ -29,5 +29,16 @@
                 </p>
             </section>
         </section>
+
+        <!-- Personna Assignment-->
+        <section class="assignment">
+            <a href="Files/personas.pdg.pdf"><img src="Images/personna.jpg"></a>
+            <section class="ass-details">
+                <a href="Files/personas.pdg.pdf"><h2>Personna: 5 Personnas for Campus Navigator</h2></a>
+                <p> 
+                    A personna of a typical campus navigator app user. 
+                </p>
+            </section>
+        </section>
     </body>
 </html>
