--- a/index.html
+++ b/index.html
@@ -39,5 +39,16 @@
                 </p>
             </section>
         </section>
+
+        <!-- Storyboard Assignment-->
+        <section class="assignment">
+            <a href="Files/Storyboards- Delightful Elephants - CSCE 190 (1).pdf"><img src="Images/storyboard.jpg"></a>
+            <section class="ass-details">
+                <a href="Files/Storyboards- Delightful Elephants - CSCE 190 (1).pdf"><h2>Storyboard for Campus Navigator</h2></a>
+                <p> 
+                    A classic story of Susan Carter and her use of Campus Navigator.
+                </p>
+            </section>
+        </section>
     </body>
 </html>
