--- a/index.html
+++ b/index.html
@@ -2,10 +2,64 @@
 <html>
     <head>
         <title> CSCE 190: Emma Sanchez</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Emma Sanchez's CSCE 190 Site</h1>
+        
+        <!-- Problem Statemtn Assignment-->
+        <section class="assignment">
+            <a href="Files/problem-statement.pdf"><img src="Images/problem-statement.jpg"></a>
+            <section class="ass-details">
+                <a href="Files/problem-statement.pdf"><h2>Problem Statement: Campus Navigator</h2></a>
+                <p> 
+                    Our students are getting lost going to their classes and our app can help create a visual aid in navigating the UofSC campus. Included will be bus routes, campus foot traffic, and lesser known walking paths. 
+                </p>
+            </section>
+        </section>
 
-        <p> I &hearts; coding!</p>
+        <!-- Affinity Diagram Assignment-->
+        <section class="assignment">
+            <a href="Files/affinity-diagram.pdf"><img src="Images/affinity-diagram.jpg"></a>
+            <section class="ass-details">
+                <a href="Files/affinity-diagram.pdf"><h2>Affinity Diagram: Campus Navigator</h2></a>
+                <p> 
+                    All aspects of campus navigation can be found in this diagram!
+                </p>
+            </section>
+        </section>
+
+        <!-- Personna Assignment-->
+        <section class="assignment">
+            <a href="Files/personas.pdg.pdf"><img src="Images/personna.jpg"></a>
+            <section class="ass-details">
+                <a href="Files/personas.pdg.pdf"><h2>Personna: 5 Personnas for Campus Navigator</h2></a>
+                <p> 
+                    A personna of a typical campus navigator app user. 
+                </p>
+            </section>
+        </section>
+
+        <!-- Storyboard Assignment-->
+        <section class="assignment">
+            <a href="Files/Storyboards- Delightful Elephants - CSCE 190 (1).pdf"><img src="Images/storyboard.jpg"></a>
+            <section class="ass-details">
+                <a href="Files/Storyboards- Delightful Elephants - CSCE 190 (1).pdf"><h2>Storyboard for Campus Navigator</h2></a>
+                <p> 
+                    A classic story of Susan Carter and her use of Campus Navigator.
+                </p>
+            </section>
+        </section>
+
+        <!-- Sketches Assignment-->
+        <section class="assignment">
+            <a href="Files/Sketches- Delightful Elephants - merged.pdf"><img src="Images/Sketches.jpg"></a>
+            <section class="ass-details">
+                <a href="Files/Sketches- Delightful Elephants - merged.pdf"><h2>Sketch for Campus Navigator</h2></a>
+                <p> 
+                    An overall view of what a Campus Navigator app would look like!
+                </p>
+            </section>
+        </section>
     </body>
 </html>
