--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                     <img src="Images/Sketches.jpg">
                 </a>
                 <p> 
+                    
                     An overall view of what a Campus Navigator app would look like!
                 </p>
             </section>
@@ -84,6 +85,19 @@
                 </a>
                 <p> 
                     A paper walkthrough of the potential look of every screen in the application
+                </p>
+            </section>
+
+            <!-- Low-fi Prototype Assignment-->
+            <section class="assignment">
+                <a href="Campus Navigator-html.zip">
+                    <h2>Paper Prototype</h2>
+                </a>
+                <a href="Files/prototype/src/index.html">
+                    <img src="Images/campus navigator.jpg">
+                </a>
+                <p> 
+                    A high-fi Prototype of what the Campus Navigator app would look like
                 </p>
             </section>
         </div>
