--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <!-- Low-fi Prototype Assignment-->
             <section class="assignment">
                 <a href="Campus Navigator-html.zip">
-                    <h2>Paper Prototype</h2>
+                    <h2>Hi-fi Prototype</h2>
                 </a>
                 <a href="Files/prototype/src/index.html">
                     <img src="Images/campus navigator.jpg">
